Add deploy script

--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@coinbase/onchainkit": "^0.36.0",
     "@coinbase/wallet-sdk": "^4.2.4",
     "@prisma/client": "^6.0.1",
+    "@rainbow-me/rainbowkit": "^2.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "ethers": "^5.7.2",
     "next": "14.2.20",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.0.0",
+    "wagmi": "^2.0.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-ignition": "^0.15.8",
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.8",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
@@ -33,9 +38,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "chai": "^4.3.7",
+    "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.20",
-    "ethers": "^6.0.0",
     "hardhat": "^2.22.17",
     "hardhat-gas-reporter": "^2.2.2",
     "postcss": "^8",
