--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@coinbase/onchainkit": "^0.36.0",
     "@coinbase/wallet-sdk": "^4.2.4",
     "@prisma/client": "^6.0.1",
+    "@rainbow-me/rainbowkit": "^2.2.1",
+    "@tanstack/react-query": "^5.62.7",
     "next": "14.2.20",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.21.54",
+    "wagmi": "^2.13.5"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
